fixed spacing around services section. Added padding below news and events images.

--- a/styles.css
+++ b/styles.css
@@ -325,6 +325,13 @@ option:disabled {
     line-height: 2em;
 }
 
+@media screen and (max-width: 450px) {
+    .services-para {
+        padding: 0;
+        line-height: 2em;
+    } 
+}
+
 .news-title {
     text-align: center;
     margin-bottom: 50px;
